ecmascript/parser/tests/test262-error-references/fail/80d1e106056a576f.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/80d1e106056a576f.js:1:21
  |
1 | function *a(){yield*}
  |                     ^

